--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ pydantic>=2.0.0
 python-dotenv>=1.0.0
 typing-extensions>=4.0.0
 rich>=13.0.0
-asyncio>=3.4.3 
+asyncio>=3.4.3
+openai-agents>=0.2.2 
