Add Flowise documentation files to .gitignore
- Included specific Flowise documentation files in .gitignore to prevent them from being tracked by Git, ensuring a cleaner repository.
- This change helps maintain focus on essential project files and reduces clutter in version control.

--- a/.gitignore
+++ b/.gitignore
@@ -183,6 +183,14 @@ tmp/
 *.sqlite3
 
 # =============================================================================
+# Documentation and temporary files
+# =============================================================================
+
+# Flowise documentation files
+Docs/Flowise/FLOWISE_API_RULES.md
+Docs/Flowise/FLOWISE_STATUS_REPORT.md
+
+# =============================================================================
 # SECURITY REMINDER
 # =============================================================================
 # 
