Refactor agent imports and enhance documentation structure
- Removed the `agents.py` file and refactored imports across the codebase to utilize `agent_orchestrator.py`, improving modularity and clarity in agent management.
- Updated `.gitignore` to include new documentation folders for Flowise and OpenAI Agents, ensuring unnecessary files are not tracked by Git.
- This restructuring prepares the codebase for future enhancements and maintains a cleaner repository.

--- a/.gitignore
+++ b/.gitignore
@@ -190,6 +190,12 @@ tmp/
 Docs/Flowise/FLOWISE_API_RULES.md
 Docs/Flowise/FLOWISE_STATUS_REPORT.md
 
+# Flowise documentation folder
+Docs/Flowise/
+
+# OpenAI Agents documentation folder
+Docs/OpenAI\ Agents/
+
 # =============================================================================
 # SECURITY REMINDER
 # =============================================================================
