Refactor README and enhance installation instructions
- Simplified the README to provide a clearer overview of the Advanced Aeromedical Evidence Review System and its key features.
- Updated installation instructions to include detailed steps for setting up the environment and required dependencies.
- Removed deprecated sections and streamlined content for better readability.
- Added new commands and usage examples to improve user guidance.
- Updated `requirements.txt` to specify exact package versions for better dependency management.
- Enhanced configuration options in `src/config.py` for improved application performance and user experience.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-openai>=1.0.0
-openai-agents>=0.1.0
-requests>=2.31.0
-pydantic>=2.0.0
-python-dotenv>=1.0.0
-typing-extensions>=4.0.0
-rich>=13.0.0
-redis>=5.0.0 
+openai==1.93.0
+openai-agents==0.1.0
+requests==2.32.4
+pydantic==2.11.7
+python-dotenv==1.1.1
+typing-extensions==4.14.0
+rich==14.0.0
+redis==6.2.0 
