--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
+rich
+
 openai==1.93.0
 openai-agents==0.1.0
 requests==2.32.4
 pydantic==2.11.7
 python-dotenv==1.1.1
 typing-extensions==4.14.0
-rich==14.0.0
 redis==6.2.0 
