Update cursor rules and documentation structure; move markdown files to Docs/ directory and add new documentation centralization rules

--- a/.gitignore
+++ b/.gitignore
@@ -196,6 +196,9 @@ Docs/Flowise/
 # OpenAI Agents documentation folder
 Docs/OpenAI\ Agents/
 
+# Ignore generated agents documentation directory
+Docs/agents.md-main/
+
 # =============================================================================
 # SECURITY REMINDER
 # =============================================================================
